Introduced the column ld_recordversion to handle the data versioning